engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/register.less
// Header Support Info
.is--ctl-register .header-main {

    .logo--supportinfo {
	    display: none;
    }
}

// Register Content
.register--content {
    .border-radius();
    .clearfix();
    width: 100%;
    display: none;

    &.is--collapsed {
        display: block;
    }

    .has--border {
        .border-radius(4px);
    }

    .alert {
        .unitize-margin(20, 18, 20, 18, 16);
    }

    .register--check {
        .unitize(8,16, padding-bottom);
    }

    .register--action {
        .unitize-margin(0, 26, 16);
        float: right;

        .btn--primary {
            float: right;

            & [class^=icon] {
                .unitize(10, 16, font-size);
                .unitize-margin(-2, 0, 0, 16);
            }
        }
    }

    .register--required-info {
	    .unitize-margin(0, 26, 16);
	    .unitize(14, 16, font-size);
    }

    .js--fancy-select {
	    .unitize(10, 16, margin-bottom);
        width: 100%;
    }

    .register--field {
	    .unitize(10, 16, margin-bottom);
	    width: 100%;
    }

    .register--customertype {
	    display: block;
    }

    .register--street {

        .register--field-street {
            margin-right: 2%;
            width: 80%;
            float: left;
        }

        .register--field-streetnumber {
            width: 18%;
            float: left;
        }

    }

    .register--zip-city {

        .register--field-zipcode {
            margin-right: 2%;
            width: 28%;
            float: left;
        }

        .register--field-city {
            .clearfix();
            width: 70%;
            float: left;
        }

    }

    .birthday--label {
	    .clearfix();
        .unitize-margin(0, 0, 5, 0);
        display: block;
        font-weight: bold;
    }

    .register--password-description {
	    .unitize(20, 16, padding-bottom);
    }

    .register--birthdate {

        .js--fancy-select {
            .unitize(15, 16, margin-bottom);
            width: 32%;
            margin-right: 2%;
            float: left;
        }

        .register--birthyear {
            .unitize(0, 16, margin-right);
        }

    }

    .register--privacy {
        .unitize-padding(20, 20);
	    .unitize-margin(0, 20, 20);
	    .unitize(14, 16, font-size);
        border: 1px solid @borderColor;

        input[type="checkbox"] {
            .unitize-margin(0, 10, 0, 0);
        }
    }

    // Personal information fieldset
    .register--personal {
	    .unitize(10, 16, padding-bottom);
	    .clearfix();
    }
}

// Register Login
.register--login {
    .clearfix();

    .panel {
        .border-radius(4px);
    }

    .register--new-customer {
        .unitize-margin(20, 0);

        .btn {
            display: block;
            width: 100%;
            text-align: center;
        }
    }

    .register--login-field {
        .unitize(10, 16, margin-bottom);
        width: 100%;
    }

    .register--login-description {
        .unitize(20, 16, padding-bottom);
    }

    .register--login-lostpassword {
        .unitize(20, 16, padding-bottom);
    }

    .register--login-action {

        & [class^=icon] {
            .unitize(10, 16, font-size);
            .unitize-margin(-2, 0, 0, 16);
        }
    }
}

// Register Advantages
.register--advantages {
    display: none;
}

.password--success {
    .unitize-margin(10, 0, 20, 0);
}

// Register Steps
.steps--content {
    display: table;
    border-top: 1px solid @borderColor;

    .steps--list {
	    .clearfix();
        display: table-row;
    }

    .steps--entry {
	    .unitize-padding(0, 10);
	    display: table-cell;
	    list-style: none;
        vertical-align: top;
        text-align: center;
    }

    .steps--spacer {
        display: none;
        vertical-align: middle;
    }

    .steps--entry .icon {
	    .secondary-gradient();
	    .border-radius(22px);
	    .unitize-padding(10, 16);
	    .box-shadow();
	    .unitize-width(46, 16);
	    .unitize(20, 16, font-size);
	    display: inline-block;
	    text-align: center;
	    color: #fff;
	    font-weight: bold;
    }

    .is--active .icon {
	    .primary-gradient();
	    color:  #fff;
    }

    // Text
    .steps--entry .text {
	    .unitize-margin(0, 0, 0, 10);
	    .unitize-height(52);
	    position: relative;
	    top: -2px;
	    display: none;
        vertical-align: middle;

        &::after {
            content: '';
            height: 100%;
        }
    }

    .is--active .text {
	    color: @primaryColor;
	    display: inline-block;
	    font-weight: bold;
    }

    .steps--entry .text--inner, .steps--entry .text::after {
	    display: inline-block;
	    vertical-align: middle;
    }

}

@media screen and (min-width: @tabletViewportWidth) {

    // Header Support Info
    .is--ctl-register .header-main {
	    box-shadow: 0 1px 1px #ccc;

        .logo-main {
            width: 100%;
        }

        .logo--shop {
            width: 40%
        }

        .logo--supportinfo {
            display: block;
            width: 40%;
        }

        .logo--trusted-shops {
            width: 20%;

            a { float: right; }
        }

    }

    // General Register Form
    .register--content {
	    .unitize(50, 16, margin-top);
        width: 49%;
        float: right;
        display: block;

        .js--fancy-select {
            .unitize(15, 16, margin-bottom);

            .register--birthday {
                margin-right: 2%;
            }
        }

        .register--field {
            .unitize(15, 16, margin-bottom);
        }

        .register--check {
            .unitize(8, 16, padding-bottom);
        }
    }

    // Register Steps
    .steps--content {
	    .unitize-padding(30, 0, 40, 0, 16);
	    background: transparent;
	    border: none;

        .steps--spacer {
            .unitize-width(80);
            display: table-cell;
            text-align: center;
	    }

        .steps--entry {
            .text {
                display: inline-block;
                font-weight: bold;
            }
        }
    }

    // Register Login
    .register--login {
        .unitize(50, 16, margin-top);
        width: 49%;
        float: left;

        .register--new-customer {
            display: none;
        }

        .register--login-field {
            .unitize(15, 16, margin-bottom);
        }
    }

    // Register advantages
    .register--advantages {
        .clearfix();
        display: block;
        width: 49%;
        float: left;

        .register--advantages-list {
            list-style: none;
            float: left;
        }

        .panel--title {
            .unitize-margin(0, 0, 10, 0, 16);
        }

        li {
            .unitize(5, 16, padding-bottom);
            .unitize(14, 16, font-size);
            display: block;
            float: left;
            width: 100%;
        }

        i[class^=icon] {
            .unitize(10, 16, font-size);
            .unitize(10, 16, margin-right);
        }

    }
}

@media screen and (min-width: @desktopViewportWidth) {

    // Header Support Info
    .is--ctl-register {
	    .unitize(48, 16, margin-bottom);
    }

    .register--content {
        .js--fancy-select {
            .unitize-width(290);
        }
    }

    // Register Steps
    .steps--content {

        .steps--entry {
            width: 20%;

            .text { width: 70%; }
        }

        .steps--spacer { width: 16% }
    }
}

